refactor resolving segments for inclusion/exclusion (#2466)
* update env toggle for staging and prod (#2454)

* increase max subsegment depth to 8 (#2462)

* refactor resolving segments for inclusion/exclusion

* restore check for existence of global exclude segment

* change 'modal' to 'entity'

---------

Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -262,11 +262,7 @@
                 *ngIf="tagIndex < 2; else moreTagsTemplate"
                 (click)="filterExperimentByChips(tag, ExperimentSearchKey.TAG)"
               >
-                <span
-                  class="chip-label"
-                  [matTooltip]="tag.length > 16 ? tag : null"
-                  matTooltipPosition="above"
-                >
+                <span class="chip-label" [matTooltip]="tag.length > 16 ? tag : null" matTooltipPosition="above">
                   {{ tag | truncate : 16 }}
                 </span>
               </mat-chip>
@@ -275,11 +271,7 @@
                   *ngIf="isAllChipsVisible(experiment.id, 'tagsVisibility')"
                   (click)="filterExperimentByChips(tag, ExperimentSearchKey.TAG)"
                 >
-                  <span
-                    class="chip-label"
-                    [matTooltip]="tag.length > 16 ? tag : null"
-                    matTooltipPosition="above"
-                  >
+                  <span class="chip-label" [matTooltip]="tag.length > 16 ? tag : null" matTooltipPosition="above">
                     {{ tag | truncate : 16 }}
                   </span>
                 </mat-chip>
