Add TrimInputDirective to auto-trim payload input values

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/conditions-table/conditions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/conditions-table/conditions-table.component.html
@@ -45,6 +45,7 @@
                 formControlName="payload"
                 [disabled]="!isExperimentEditable"
                 autocomplete="off"
+                appTrimInput
               />
             </mat-form-field>
           </ng-container>
