--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
@@ -539,6 +539,7 @@
                                     formControlName="value"
                                     [value]="payload?.value"
                                     autocomplete="off"
+                                    appTrimInput
                                   />
                                 </span>
                               </mat-form-field>
