--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/delete-feature-flag-modal/delete-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/delete-feature-flag-modal/delete-feature-flag-modal.component.html
@@ -21,6 +21,7 @@
           [placeholder]="'global.delete.input-placeholder.text' | translate"
           [(ngModel)]="inputValue"
           (ngModelChange)="onInputChange($event)"
+          appTrimInput
         />
       </mat-form-field>
     </div>
