--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/delete-segment-modal/delete-segment-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/delete-segment-modal/delete-segment-modal.component.html
@@ -21,6 +21,7 @@
           [placeholder]="'global.delete.input-placeholder.text' | translate"
           [(ngModel)]="inputValue"
           (ngModelChange)="onInputChange($event)"
+          appTrimInput
         />
       </mat-form-field>
     </div>
