--- a/frontend/projects/upgrade/src/app/shared/components/delete/delete.component.html
+++ b/frontend/projects/upgrade/src/app/shared/components/delete/delete.component.html
@@ -8,6 +8,7 @@
       matInput
       [placeholder]="'global.delete.input-placeholder.text' | translate"
       [(ngModel)]="isDeleteButtonClicked"
+      appTrimInput
     />
   </mat-form-field>
 </div>
