add parent segments list to 'Used By' status of segments

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-footer/segment-overview-details-footer.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-footer/segment-overview-details-footer.component.html
@@ -1,4 +1,5 @@
 <app-common-tabbed-section-card-footer
   [tabLabels]="tabLabels"
+  [selectedIndex]="selectedIndex"
   (selectedTabChange)="onSelectedTabChange($event)"
 ></app-common-tabbed-section-card-footer>
