--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.html
@@ -3,6 +3,7 @@
     mat-stretch-tabs="false"
     mat-align-tabs="start"
     animationDuration="250ms"
+    [(selectedIndex)]="selectedIndex"
     (selectedTabChange)="onSelectedTabChange($event)"
     class="new-tab-group"
   >
