--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-root-page/experiment-root-page-content/experiment-root-section-card/experiment-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-root-page/experiment-root-page-content/experiment-root-section-card/experiment-root-section-card.component.html
@@ -1,1 +1,45 @@
-<p>experiment-root-section-card works!</p>
+<app-common-section-card>
+  <!-- header-left -->
+  <app-common-section-card-search-header
+    header-left
+    [filterOptions]="experimentFilterOption"
+    [searchKey]="searchKey$ | async"
+    [searchString]="searchString$ | async"
+    (search)="onSearch($event)"
+  ></app-common-section-card-search-header>
+
+  <!-- header-right -->
+  <app-common-section-card-action-buttons
+    header-right
+    [showPrimaryButton]="(permissions$ | async)?.experiments.create"
+    [primaryButtonText]="'experiments.add-experiment.text' | translate"
+    [menuButtonItems]="menuButtonItems"
+    [showMenuButton]="(permissions$ | async)?.experiments.create"
+    [isSectionCardExpanded]="isSectionCardExpanded"
+    (primaryButtonClick)="onAddExperimentButtonClick()"
+    (menuButtonItemClick)="onMenuButtonItemClick($event)"
+    (sectionCardExpandChange)="onSectionCardExpandChange($event)"
+  ></app-common-section-card-action-buttons>
+
+  <!-- content -->
+  <ng-container content *ngIf="isSectionCardExpanded">
+    <ng-container *ngIf="!(isInitialLoading$ | async); else table">
+      <div class="mat-spinner-container">
+        <mat-spinner diameter="60"></mat-spinner>
+      </div>
+    </ng-container>
+
+    <ng-template #table>
+      <div class="table-container">
+        <app-experiment-root-section-card-table
+          [dataSource$]="dataSource$ | async"
+          [isLoading$]="isLoadingExperiments$"
+          [isSearchActive$]="isSearchActive$"
+          [expandedTagsMap]="expandedTagsMap"
+          (tagsExpanded)="onTagsExpanded($event.flagId, $event.expanded)"
+        >
+        </app-experiment-root-section-card-table>
+      </div>
+    </ng-template>
+  </ng-container>
+</app-common-section-card>
