--- a/frontend/projects/upgrade/src/styles/variables.scss
+++ b/frontend/projects/upgrade/src/styles/variables.scss
@@ -14,6 +14,8 @@
   --status-draft: #cc66ff;
   --status-inactive: #ff9933;
   --status-enrolling: #3366ff;
+  --status-scheduled: #829bf8;
+  --status-preview: #829bf8;
   --status-enrollment-complete: #33cc66;
   --status-cancelled: #ff3333;
   --status-archived: #999999;
@@ -25,6 +27,8 @@
   --status-draft-alpha: #cc66ff0c;
   --status-inactive-alpha: #ff99330c;
   --status-enrolling-alpha: #3366ff0c;
+  --status-scheduled-alpha: #829bf80c;
+  --status-preview-alpha: #829bf80c;
   --status-enrollment-complete-alpha: #33cc660c;
   --status-cancelled-alpha: #ff33330c;
   --status-archived-alpha: #9999990c;
