--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-root-page/experiment-root-page-content/experiment-root-section-card/experiment-root-section-card-table/experiment-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-root-page/experiment-root-page-content/experiment-root-section-card/experiment-root-section-card-table/experiment-root-section-card-table.component.html
@@ -1,1 +1,149 @@
-<p>experiment-root-section-card-table works!</p>
+<div class="experiment-list-table-container" #tableContainer>
+  <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoading$ | async"></mat-progress-bar>
+  <table
+    class="experiment-list-table"
+    mat-table
+    [dataSource]="dataSource$"
+    [ngClass]="{ 'no-data': !dataSource$?.data?.length }"
+    matSort
+    (matSortChange)="changeSorting($event)"
+    [matSortActive]="experimentSortKey$ | async"
+    [matSortDirection]="experimentSortAs$ | async | lowercase"
+  >
+    <!-- Name Column -->
+    <ng-container [matColumnDef]="EXPERIMENT_ROOT_COLUMN_NAMES.NAME">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="name-column ft-14-600">
+        {{ EXPERIMENT_TRANSLATION_KEYS.NAME | translate }}
+      </th>
+      <td mat-cell *matCellDef="let experiment" class="name-column ft-14-400">
+        <a
+          [routerLink]="['/experiments', 'detail', experiment.id]"
+          [matTooltip]="experiment.name.length > 24 ? experiment.name : null"
+          matTooltipPosition="right"
+          class="experiment-name"
+        >
+          {{ experiment.name | truncate : 24 }}
+        </a>
+        <br />
+        <span
+          [matTooltip]="experiment.description?.length > 35 ? experiment.description : null"
+          matTooltipPosition="right"
+          class="experiment-description ft-10-400"
+        >
+          {{ experiment.description | truncate : 35 }}
+        </span>
+      </td>
+    </ng-container>
+
+    <!-- Status Column -->
+    <ng-container [matColumnDef]="EXPERIMENT_ROOT_COLUMN_NAMES.STATUS">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="status-column ft-14-600">
+        {{ EXPERIMENT_TRANSLATION_KEYS.STATUS | translate }}
+      </th>
+      <td mat-cell *matCellDef="let experiment" class="status-column ft-14-400">
+        <app-common-status-indicator-chip
+          [chipClass]="experiment.state"
+        ></app-common-status-indicator-chip>
+      </td>
+    </ng-container>
+
+    <!-- Updated at Column -->
+    <ng-container [matColumnDef]="EXPERIMENT_ROOT_COLUMN_NAMES.UPDATED_AT">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="updated-at-column ft-14-600">
+        {{ EXPERIMENT_TRANSLATION_KEYS.UPDATED_AT | translate }}
+      </th>
+      <td mat-cell *matCellDef="let experiment" class="updated-at-column ft-14-400">
+        <ng-container>
+          {{ experiment.updatedAt | date : 'MMM d, y, h:mm a' }}
+        </ng-container>
+      </td>
+    </ng-container>
+
+    <!-- App Context Column -->
+    <ng-container [matColumnDef]="EXPERIMENT_ROOT_COLUMN_NAMES.APP_CONTEXT">
+      <th mat-header-cell *matHeaderCellDef class="app-context-column ft-14-600">
+        {{ EXPERIMENT_TRANSLATION_KEYS.APP_CONTEXT | translate }}
+      </th>
+      <td mat-cell *matCellDef="let experiment" class="ft-14-400">
+        {{ experiment.context[0] }}
+      </td>
+    </ng-container>
+
+    <!-- Tags Column -->
+    <ng-container [matColumnDef]="EXPERIMENT_ROOT_COLUMN_NAMES.TAGS">
+      <th mat-header-cell *matHeaderCellDef class="tags-column ft-14-600">
+        {{ EXPERIMENT_TRANSLATION_KEYS.TAGS | translate }}
+      </th>
+      <td mat-cell *matCellDef="let experiment" class="tags-column ft-14-400 dense-2">
+        <app-common-tag-list
+          [tags]="experiment.tags"
+          [isExpanded]="isTagsExpanded(experiment.id)"
+          (expandedChange)="onTagExpandedChange(experiment.id, $event)"
+          (tagClick)="filterExperimentByChips($event, ExperimentSearchKey.TAG)"
+        ></app-common-tag-list>
+      </td>
+    </ng-container>
+
+    <!-- Enrollment Column -->
+    <ng-container [matColumnDef]="EXPERIMENT_ROOT_COLUMN_NAMES.ENROLLMENT">
+      <th mat-header-cell *matHeaderCellDef class="enrollment-column ft-14-600">
+        {{ EXPERIMENT_TRANSLATION_KEYS.ENROLLMENT | translate }}
+      </th>
+      <td mat-cell *matCellDef="let experiment" class="enrollment-column ft-14-400">
+        <ng-container *ngIf="experiment.stat; else skeletonTemplate">
+          <span
+            class="enrollment-info"
+            *ngIf="experiment.stat?.users"
+            [innerHTML]="
+              'home.experiments-table.students.text' | translate : { noOfStudents: experiment.stat?.users }
+            "
+          ></span>
+          <span class="enrollment-info" *ngIf="experiment.stat?.groups">
+            {{ 'home.experiments-table.classes.text' | translate : { noOfClasses: experiment.stat?.groups } }}
+            <span *ngIf="experiment.stat?.groups < 2; else groupTypePlural">
+              {{ 'global.group-type-singular.text' | translate : { groupType: experiment.group } }}
+            </span>
+            <ng-template #groupTypePlural>
+              <span>{{ 'global.group-type-plural.text' | translate : { groupType: experiment.group } }}</span>
+            </ng-template>
+          </span>
+          <span
+            class="enrollment-info"
+            *ngIf="!experiment.stat?.groups && !experiment.stat?.users"
+            [innerHTML]="'home.experiments-table.students.text' | translate : { noOfStudents: 0 }"
+          ></span>
+        </ng-container>
+        <ng-template #skeletonTemplate>
+          <ngx-skeleton-loader
+            count="1"
+            animation="pulse"
+            [theme]="{
+              'border-radius': '5px',
+              height: '20px',
+              position: 'relative',
+              top: '8px',
+              'animation-duration': '2s'
+            }"
+          >
+          </ngx-skeleton-loader>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+    <!-- No Data Row -->
+    <tr *matNoDataRow>
+      <td class="ft-14-400" [attr.colspan]="displayedColumns.length">
+        <ng-container *ngIf="isSearchActive$ | async; else noExperiments">
+          {{ 'experiments.no-matching-experiments.text' | translate }}
+        </ng-container>
+        <ng-template #noExperiments>
+          {{ 'experiments.no-experiments-in-table.text' | translate }}
+        </ng-template>
+      </td>
+    </tr>
+  </table>
+  <div #bottomTrigger></div>
+</div>
