--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/modals/upsert-experiment-modal/upsert-experiment-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/modals/upsert-experiment-modal/upsert-experiment-modal.component.scss
@@ -2,9 +2,14 @@
   color: red;
 }
 
+.disabled-text {
+  color: rgba(0, 0, 0, 0.38) !important;
+}
+
 .experiment-type-section,
 .unit-assignment-section,
 .consistency-rule-section,
+.condition-order-section,
 .assignment-algorithm-section {
   padding: 4px 0;
 }
