Make experiment details page navigation work

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-root-page/experiment-root-page-content/experiment-root-section-card/experiment-root-section-card-table/experiment-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-root-page/experiment-root-page-content/experiment-root-section-card/experiment-root-section-card-table/experiment-root-section-card-table.component.html
@@ -17,7 +17,7 @@
       </th>
       <td mat-cell *matCellDef="let experiment" class="name-column ft-14-400">
         <a
-          [routerLink]="['/experiments', 'detail', experiment.id]"
+          [routerLink]="['/home', 'detail', experiment.id]"
           [matTooltip]="experiment.name.length > 24 ? experiment.name : null"
           matTooltipPosition="right"
           class="experiment-name"
