Refine selectExperimentOverviewDetails and update CommonTabbedSectionCardFooterComponent

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-overview-details-section-card/experiment-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-overview-details-section-card/experiment-overview-details-section-card.component.html
@@ -28,5 +28,8 @@
   </ng-container>
 
   <!-- footer -->
-  <app-experiment-overview-details-footer footer></app-experiment-overview-details-footer>
+  <app-experiment-overview-details-footer
+    footer
+    (tabChange)="onSelectedTabChange($event)"
+  ></app-experiment-overview-details-footer>
 </app-common-section-card>
