--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-details-page-content.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-details-page-content.component.html
@@ -4,40 +4,50 @@
       <app-experiment-overview-details-section-card
         [isSectionCardExpanded]="isSectionCardExpanded"
         (sectionCardExpandChange)="onSectionCardExpandChange($event)"
+        (tabChange)="onTabChange($event)"
         section-card
       ></app-experiment-overview-details-section-card>
 
+      <!-- Design Tab -->
       <app-experiment-decision-points-section-card
+        *ngIf="activeTabIndex === 0"
         [isSectionCardExpanded]="isSectionCardExpanded"
         section-card
       ></app-experiment-decision-points-section-card>
 
       <app-experiment-conditions-section-card
+        *ngIf="activeTabIndex === 0"
         [isSectionCardExpanded]="isSectionCardExpanded"
         section-card
       ></app-experiment-conditions-section-card>
 
       <app-experiment-inclusions-section-card
+        *ngIf="activeTabIndex === 0"
         [isSectionCardExpanded]="isSectionCardExpanded"
         section-card
       ></app-experiment-inclusions-section-card>
 
       <app-experiment-exclusions-section-card
+        *ngIf="activeTabIndex === 0"
         [isSectionCardExpanded]="isSectionCardExpanded"
         section-card
       ></app-experiment-exclusions-section-card>
 
       <app-experiment-metrics-section-card
+        *ngIf="activeTabIndex === 0"
         [isSectionCardExpanded]="isSectionCardExpanded"
         section-card
       ></app-experiment-metrics-section-card>
 
+      <!-- Data Tab -->
       <app-experiment-enrollment-data-section-card
+        *ngIf="activeTabIndex === 1"
         [isSectionCardExpanded]="isSectionCardExpanded"
         section-card
       ></app-experiment-enrollment-data-section-card>
 
       <app-experiment-metrics-data-section-card
+        *ngIf="activeTabIndex === 1"
         [isSectionCardExpanded]="isSectionCardExpanded"
         section-card
       ></app-experiment-metrics-data-section-card>
